--- a/style.css
+++ b/style.css
@@ -1,61 +1,75 @@
+
+
 body {
-    background-color: #b4f9ff;
+    background-color: #7efdfd; 
 }
+  
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-.calculator {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	margin: 5rem auto;
+	margin-bottom: 2rem;
 }
 
+
 .display {
-    background-color: #fff;
-    font-size: 2rem;
+    width: 300px;
+    height: 40px;
+    box-sizing: border-box;
+    font-size: 1.5em;
+    border: 1px solid #ccc;
+    padding: 5px;
+    margin-bottom: 5px;
+    border-radius: 5px;
     text-align: right;
-    padding: 10px;
-    border-radius: 20px;
-    margin-bottom: 10px;
 }
 
 .calculator-buttons {
-    display: flex;
-    width: 100%;
-
-}
-
-.calculator-buttons td {
-    flex: 1;
-}
-  
-table {
-    width: 100%;
-    margin: 0 auto;
-}
-  
-button {
-    width: 100%;
-    height: 60px;
-    font-size: 2rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto repeat(4, 1fr);
+    grid-gap: 5px;
+    background-color: #fff;
+    border: 1px solid #ccc;
     border-radius: 5px;
+    padding: 10px;
+    width: 300px;
+    box-sizing: border-box;
+    margin: 0 auto;
+  }
+  
+
+  
+.btn {
+    background-color: #f2f2f2;
     border: none;
-    background-color: #eee;
-    color: #333;
+    border-radius: 5px;
+    font-size: 1.5em;
+    padding: 10px;
+    text-align: center;
+    cursor: pointer;
 }
   
-button:hover {
-    background-color: #ccc;
+.btn:hover {
+    background-color: #ddd;
+}
+  
+#clear, #backspace {
+    background-color: #ff6666;
     color: #fff;
- }
-  
-button:active {
-    transform: scale(0.95);
 }
+  
+#equals {
+    background-color: #66cc66;
+    color: #fff;
+    grid-row: 4 / span 2;
+    grid-column: 4;
+}
+  
+  #zero {
+    grid-column: 1 / span 2;
+  }
+  
