--- a/style.css
+++ b/style.css
@@ -14,17 +14,21 @@ body {
 	margin-bottom: 2rem;
 }
 
+.calculator-display {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin: 5px;
+}
+
 
 .display {
     width: 300px;
     height: 40px;
     box-sizing: border-box;
     font-size: 1.5em;
-    border: 1px solid #ccc;
     padding: 5px;
-    margin-bottom: 5px;
-    border-radius: 5px;
     text-align: right;
+    background-color: #fff;
 }
 
 .calculator-buttons {
